Update Проект Фабрика данных ПД.md

--- a/docs/Фабрика данных/Проект "Фабрика данных ПД".md
+++ b/docs/Фабрика данных/Проект "Фабрика данных ПД".md
@@ -1,4 +1,4 @@
-[[Описание проекта "Фабрика данных ПД"]]
+[[Описание проекта Фабрика данных ПД]]
 [[Методы сбора данных]]
 [[Архитектура АС]]
 [[Roadmap]]
